[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Marcin Szczepanski <mszczepanski@atlassian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "^0.3.0"
aoc-runner-derive = "^0.3.0"
regex = "1"
lazy_static = "1.4.0"
petgraph = "0.5.1"
itertools = "0.10.0"
rayon = "1.5"